--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,4 @@ yarn-debug.log*
 yarn-error.log*
 /public/port-0.0.0-py3-none-any.whl
 /src/framework/processing/py/dist/port-0.0.0-py3-none-any.whl
+/src/framework/processing/py/port/__pycache__
